--- a/restaurants/zucchini-kill-bakery.html
+++ b/restaurants/zucchini-kill-bakery.html
@@ -144,26 +144,64 @@
                 <div class="detail-grid">
                     <div class="main-content">
                         <div class="section">
-                            <h2>About Zucchini Kill</h2>
-                            <p class="description">Vegan and gluten-free bakery known for its punk-rock aesthetic and delectable sweets, including perfect vegan Swiss roll cake.</p>
+                            <h2>About Zucchini Kill Bakery</h2>
+                            <p class="description">Zucchini Kill isn't just a bakery—it's a <strong>vegan, gluten-free revolution</strong> wrapped in punk rock attitude. Named after the legendary Riot Grrrl band Bikini Kill, this East Austin gem proves that dietary restrictions don't mean sacrificing flavor, creativity, or fun.</p>
+                            <p>Founded by a passionate baker who wanted to create indulgent treats that everyone could enjoy, Zucchini Kill has earned a cult following among Austin's vegan, gluten-free, and punk communities. The bakery operates from a fully dedicated gluten-free and vegan facility, making it one of the safest options in the city for celiacs.</p>
                         </div>
 
-                                                <div class="section">
-                            <h2>Gluten-Free Information</h2>
-                            <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
+                        <div class="section">
+                            <h2>Why Zucchini Kill is Celiac-Safe</h2>
+                            <p>Zucchini Kill takes allergen safety as seriously as they take flavor:</p>
                             <ul class="gf-features">
-                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
+                                <li><strong>100% Dedicated GF Facility:</strong> No gluten has ever touched their kitchen equipment</li>
+                                <li><strong>100% Vegan:</strong> Also free from dairy and eggs—great for multiple allergies</li>
+                                <li><strong>Certified GF Ingredients:</strong> All flour blends and ingredients are verified gluten-free</li>
+                                <li><strong>Small Batch Production:</strong> Everything made fresh with meticulous attention to detail</li>
+                                <li><strong>Transparent Labeling:</strong> All allergens clearly marked on every item</li>
                             </ul>
+                            <p>The combination of vegan AND gluten-free means this bakery is safe for an unusually wide range of dietary needs.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Popular Menu Items</h2>
-                            <p>Specializes in gluten-free baked goods including breads, pastries, and desserts. All items are made in dedicated gluten-free facilities with certified gluten-free ingredients.</p>
+                            <h2>Must-Try Menu Items</h2>
+                            <p>Zucchini Kill's rotating menu features creative takes on classic treats:</p>
+                            <ul>
+                                <li><strong>Vegan Swiss Roll ($8/slice, $45 whole):</strong> Their signature item—light sponge cake rolled with creamy filling. Flavors rotate seasonally (chocolate, strawberry, matcha).</li>
+                                <li><strong>Twinkie-Style Cakes ($5):</strong> A nostalgic treat made vegan and GF. Soft golden cake with cream filling that rivals the original.</li>
+                                <li><strong>Cupcakes ($4-5):</strong> Moist, flavorful, and piled high with buttercream. Flavors include classic chocolate, vanilla bean, and rotating specials like lavender or pumpkin spice.</li>
+                                <li><strong>Cinnamon Rolls ($6):</strong> Warm, gooey, and topped with cream cheese frosting. Best enjoyed fresh from the oven.</li>
+                                <li><strong>Cookie Sandwiches ($5):</strong> Two soft cookies with cream filling. The chocolate chip version is legendary.</li>
+                                <li><strong>Seasonal Specials:</strong> Look for holiday items like pumpkin pie, yule logs, and Valentine's treats.</li>
+                            </ul>
+                            <p><strong>Pro tip:</strong> Follow @zucchinikill on Instagram for drop announcements and limited-edition flavors that sell out fast.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Location & Atmosphere</h2>
-                            <p>Provides a dedicated gluten-free bakery experience with fresh-baked goods made daily. Completely safe for celiacs with no cross-contamination risk.</p>
+                            <h2>How to Order</h2>
+                            <p>Zucchini Kill operates a bit differently than traditional bakeries:</p>
+                            <ul>
+                                <li><strong>Online Pre-Orders:</strong> The most reliable way to get what you want—order through their website for pickup</li>
+                                <li><strong>Pop-Up Markets:</strong> Find them at local markets and events (check social media for locations)</li>
+                                <li><strong>Custom Orders:</strong> Birthday cakes, wedding desserts, and large orders available with advance notice</li>
+                                <li><strong>Storefront Hours:</strong> Check their website for current retail hours—they vary seasonally</li>
+                            </ul>
+                            <p><strong>Planning ahead:</strong> Popular items sell out quickly. Order 2-3 days in advance for weekends, and 1-2 weeks for custom cakes.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Zucchini Kill Vibe</h2>
+                            <p>The punk rock aesthetic isn't just marketing—it's woven into everything from the hand-drawn labels to the playlist pumping through the kitchen. The space feels rebellious and welcoming, like the best DIY venues. Expect bold colors, vintage touches, and zero pretension.</p>
+                            <p>This is a bakery that celebrates being different, making it a perfect fit for those of us who've always felt like outsiders in the food world due to our dietary restrictions.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I'm vegan AND celiac, which usually means I can't have bakery treats. Zucchini Kill changed that. Their Swiss roll made me cry—I hadn't had cake like that in years." — Megan P., Austin
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "My non-vegan, non-GF friends can't believe these cupcakes are 'allergy-friendly.' They're just straight-up delicious. The punk rock vibes are a bonus." — Jason T., East Austin
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
