--- a/restaurants/true-food-kitchen---domain.html
+++ b/restaurants/true-food-kitchen---domain.html
@@ -145,25 +145,80 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About True Food Kitchen - Domain</h2>
-                            <p class="description">True Food Kitchen Domain features health-focused Mediterranean cuisine with clearly marked gluten-free menu items. Located in North Austin's Domain shopping district with modern dining atmosphere.</p>
-                        </div>
-
-                                                <div class="section">
-                            <h2>Gluten-Free Information</h2>
-                            <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
-                            <ul class="gf-features">
-                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
-                            </ul>
+                            <p class="description">True Food Kitchen brings Dr. Andrew Weil's anti-inflammatory diet philosophy to life through <strong>seasonal, nutrient-dense cuisine</strong> that happens to be incredibly gluten-free friendly. Founded on the principle that food should make you feel better, not worse, True Food has become a destination for health-conscious diners across the country.</p>
+                            <p>The Domain location in North Austin offers the full True Food experience: a thoughtfully designed menu where approximately <strong>75% of items are gluten-free or can be modified</strong>, combined with a bright, modern atmosphere perfect for everything from business lunches to family dinners.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Popular Menu Items</h2>
-                            <p>Specializes in Mediterranean cuisine with extensive gluten-free options including fresh salads, grilled proteins, and traditional dishes adapted for gluten-free diners.</p>
+                            <h2>Gluten-Free Dining at True Food Kitchen</h2>
+                            <p>True Food Kitchen has built their reputation on accommodating dietary needs with care:</p>
+                            <ul class="gf-features">
+                                <li><strong>Clearly Marked Menu:</strong> GF items labeled with symbols; staff can explain modifications</li>
+                                <li><strong>Allergen Training:</strong> All servers complete comprehensive allergen education</li>
+                                <li><strong>Kitchen Protocols:</strong> Dedicated prep areas and tools for allergen-free orders when notified</li>
+                                <li><strong>Manager Involvement:</strong> Celiac mentions are flagged for manager review</li>
+                                <li><strong>Ingredient Transparency:</strong> Detailed allergen menus available upon request</li>
+                            </ul>
+                            <p><strong>Important:</strong> True Food is NOT a dedicated gluten-free kitchen. Always inform your server of celiac disease, and they'll ensure proper protocols are followed.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Must-Try Gluten-Free Dishes</h2>
+                            <p>True Food's menu changes seasonally, but these staples are consistently available and naturally GF or easily modified:</p>
+                            <ul>
+                                <li><strong>Ancient Grains Bowl ($17):</strong> Quinoa, miso-glazed sweet potato, turmeric, and vegetables. Flavorful and filling—a lunch favorite.</li>
+                                <li><strong>Grass-Fed Burger (GF bun available, $18):</strong> High-quality beef with caramelized onion, aged white cheddar, and TFK sauce on a gluten-free bun.</li>
+                                <li><strong>Spaghetti Squash Casserole ($16):</strong> A comfort food classic reimagined—naturally GF and incredibly satisfying.</li>
+                                <li><strong>Korean Noodles (request GF noodles, $19):</strong> Ask for the gluten-free rice noodle substitution for this umami-rich bowl.</li>
+                                <li><strong>Grilled Fish Tacos ($18):</strong> Served on corn tortillas with citrus slaw and avocado. Fresh and light.</li>
+                                <li><strong>Seasonal Vegetable Sides:</strong> Charred cauliflower, roasted brussels sprouts, and seasonal preparations are typically GF.</li>
+                            </ul>
+                            <p><strong>Pro tip:</strong> Ask for the "gluten-free allergen menu" which lists every safe option and modification available.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>What to Avoid or Modify</h2>
+                            <p>Some items require modifications or should be skipped entirely:</p>
+                            <ul>
+                                <li><strong>Pizza:</strong> The GF crust is available but prepared in shared ovens—risky for severe celiac</li>
+                                <li><strong>Fried items:</strong> Ask about shared fryers before ordering anything fried</li>
+                                <li><strong>Soy sauce-based dishes:</strong> Request tamari substitution</li>
+                                <li><strong>Bread service:</strong> Decline the bread basket to avoid crumbs at your table</li>
+                            </ul>
+                            <p>When in doubt, ask your server to confirm with the kitchen. The staff genuinely wants to help you have a safe meal.</p>
                         </div>
 
                         <div class="section">
                             <h2>Location & Atmosphere</h2>
-                            <p>Provides an authentic Mediterranean dining experience with healthy, gluten-free options. Known for fresh ingredients and traditional cooking methods adapted for celiac-safe dining.</p>
+                            <p>The Domain location features True Food's signature aesthetic: natural materials, living plant walls, abundant natural light, and an open kitchen. The vibe is upscale-casual—comfortable for jeans and a nice top or business casual attire.</p>
+                            <p><strong>Best times to visit:</strong></p>
+                            <ul>
+                                <li><strong>Weekday lunch (11:30am-1:30pm):</strong> Popular with Domain office workers; make a reservation</li>
+                                <li><strong>Early dinner (5-6pm):</strong> Beat the dinner rush and enjoy quieter service</li>
+                                <li><strong>Weekend brunch:</strong> Features additional GF options like egg dishes and breakfast bowls</li>
+                            </ul>
+                            <p><strong>Parking:</strong> Free parking in the Domain garage. The restaurant is walkable from many Domain hotels.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Reservations & Tips</h2>
+                            <p>True Food Kitchen accepts reservations and we highly recommend booking, especially for dinner:</p>
+                            <ul>
+                                <li><strong>Reserve online:</strong> Use OpenTable or their website; note "celiac" in special requests</li>
+                                <li><strong>Confirm at check-in:</strong> Remind the host about dietary needs when seated</li>
+                                <li><strong>Happy Hour:</strong> Weekdays 3-6pm offer discounted drinks and select appetizers</li>
+                                <li><strong>Seasonal Menu Changes:</strong> Visit quarterly to experience new dishes</li>
+                            </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "True Food is my go-to for work lunches when I need somewhere nice that can accommodate my celiac. The staff always takes it seriously and the ancient grains bowl is genuinely delicious." — Priya M., Round Rock
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "Love that I can bring my gluten-free daughter here and she has tons of options—not just one sad salad. The GF burger is her favorite." — The Williams Family
+                            </blockquote>
                         </div>
 
                         <div class="related-restaurants">
