--- a/restaurants/uchi.html
+++ b/restaurants/uchi.html
@@ -145,25 +145,75 @@
                     <div class="main-content">
                         <div class="section">
                             <h2>About Uchi</h2>
-                            <p class="description">Sushi restaurant with knowledgeable staff who can assist in modifying items for gluten-free needs. Offers dishes like the Machi Cure.</p>
+                            <p class="description">Uchi is Austin's crown jewel of Japanese cuisine—a James Beard Award-winning restaurant that has earned national acclaim for its innovative approach to sushi and Japanese cooking. What makes Uchi remarkable for the gluten-free community is the staff's <strong>exceptional knowledge and willingness to accommodate</strong> celiac diners without compromising the artistry of their dishes.</p>
+                            <p>Founded by Chef Tyson Cole in 2003, Uchi (meaning "house" in Japanese) transformed Austin's dining scene and continues to set the standard for creative omakase experiences. For gluten-free diners, this means access to world-class sushi prepared by chefs who genuinely understand cross-contamination concerns.</p>
                         </div>
 
-                                                <div class="section">
-                            <h2>Gluten-Free Information</h2>
-                            <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
+                        <div class="section">
+                            <h2>Gluten-Free Dining at Uchi</h2>
+                            <p>While Uchi is not a dedicated gluten-free restaurant, their approach to accommodating celiac guests is among the best in Austin:</p>
                             <ul class="gf-features">
-                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
+                                <li><strong>Knowledgeable Staff:</strong> Servers are trained to identify GF-safe dishes and communicate with the kitchen</li>
+                                <li><strong>Tamari Available:</strong> Gluten-free soy sauce provided upon request</li>
+                                <li><strong>Chef Communication:</strong> Request to speak with a chef for omakase modifications</li>
+                                <li><strong>Allergy Protocols:</strong> Kitchen uses separate prep areas when notified of celiac</li>
+                                <li><strong>Naturally GF Options:</strong> Many sashimi and nigiri items are inherently gluten-free</li>
                             </ul>
+                            <p><strong>Important:</strong> Always mention celiac disease (not just "gluten-free preference") when making reservations and again when seated. This triggers their more rigorous protocols.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Popular Menu Items</h2>
-                            <p>Offers Asian fusion cuisine with many gluten-free options including fresh bowls, traditional Asian dishes, and healthy alternatives made with gluten-free ingredients.</p>
+                            <h2>Must-Try Gluten-Free Dishes</h2>
+                            <p>Uchi's menu changes seasonally, but these items are consistently available and can be prepared gluten-free:</p>
+                            <ul>
+                                <li><strong>Machi Cure ($16):</strong> Uchi's signature dish—bigeye tuna with marcona almonds, myoga, and ponzu. Request GF ponzu (tamari-based).</li>
+                                <li><strong>Hama Chili ($18):</strong> Yellowtail sashimi with Thai chili, ponzu, and orange. A flavor explosion that's naturally GF.</li>
+                                <li><strong>Nigiri Selection (varies):</strong> Simple nigiri with fresh fish over rice. Ask for tamari instead of regular soy sauce.</li>
+                                <li><strong>Wagyu Beef Sashimi ($24):</strong> Melt-in-your-mouth wagyu with sea salt and citrus. Naturally gluten-free.</li>
+                                <li><strong>Jarred Uni ($28):</strong> Fresh sea urchin with cucumber and rice crackers—request without crackers for GF.</li>
+                            </ul>
+                            <p><strong>Pro tip:</strong> Ask for the "gluten-free omakase" option. Many guests report that chefs create stunning multi-course experiences within GF parameters when given advance notice.</p>
                         </div>
 
                         <div class="section">
-                            <h2>Location & Atmosphere</h2>
-                            <p>Delivers authentic Asian flavors with gluten-free adaptations. Popular for fresh, healthy Asian cuisine made safe for those with gluten sensitivities.</p>
+                            <h2>What to Avoid</h2>
+                            <p>Some items at Uchi cannot be made gluten-free due to their core ingredients:</p>
+                            <ul>
+                                <li><strong>Tempura dishes:</strong> The batter contains wheat flour</li>
+                                <li><strong>Most hot dishes with teriyaki:</strong> Unless GF sauce is available</li>
+                                <li><strong>Fried items:</strong> Shared fryers are used</li>
+                                <li><strong>Some specialty rolls:</strong> May contain hidden gluten in sauces</li>
+                            </ul>
+                            <p>When in doubt, ask your server to confirm with the kitchen. The staff genuinely cares about getting it right.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Reservations & What to Expect</h2>
+                            <p>Uchi is a destination dining experience with a few things to know:</p>
+                            <ul>
+                                <li><strong>Reservations Required:</strong> Book 2-4 weeks ahead for weekends; easier availability weeknights</li>
+                                <li><strong>Note Celiac in Reservation:</strong> Add "celiac disease - gluten-free required" in the notes when booking</li>
+                                <li><strong>Price Point:</strong> Expect $75-150 per person depending on what you order</li>
+                                <li><strong>Dress Code:</strong> Smart casual—you'll feel comfortable in nice jeans or a dress</li>
+                                <li><strong>Bar Seating:</strong> Walk-ins can sometimes snag bar seats with shorter waits</li>
+                            </ul>
+                            <p><strong>Parking:</strong> Valet available ($10) or street parking on South Lamar—but spaces fill quickly on weekends.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>The Uchi Experience</h2>
+                            <p>Located in a converted 1930s bungalow on South Lamar, Uchi offers an intimate, sophisticated atmosphere. The main dining room features sleek Japanese-inspired design with warm woods and subtle lighting. Request a seat at the sushi bar for the full experience—watching the chefs work is part of the magic.</p>
+                            <p>The restaurant is ideal for special occasions, date nights, or anytime you want to treat yourself to exceptional Japanese cuisine without sacrificing safety.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Community Reviews</h2>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "I've been to Uchi four times since my celiac diagnosis, and every experience has been flawless. They take it seriously and the food is transcendent. Worth every penny." — Michelle K., Dallas
+                            </blockquote>
+                            <blockquote style="border-left: 3px solid #4CAF50; padding-left: 1rem; margin: 1rem 0; font-style: italic;">
+                                "For my 40th birthday, I told them I have celiac and asked for omakase. The chef created a 10-course gluten-free tasting menu that was the best meal of my life." — Robert L., Austin
+                            </blockquote>
                         </div>
 
                         
