Fix The Well Downtown URL: rename to the-well---downtown.html
- Renamed the-well-downtown.html to the-well---downtown.html to match script.js slug generation
- Updated canonical URLs in the file
- Updated sitemap.xml
- Updated internal links in Congress, Westlake, and ATX Cocina pages

--- a/restaurants/atx-cocina.html
+++ b/restaurants/atx-cocina.html
@@ -203,7 +203,7 @@
                         <div class="nearby-restaurants">
                             <h3>Nearby Restaurants</h3>
                             <ul>
-                                <li><a href="the-well-downtown.html">The Well - Downtown</a> - Downtown Austin</li>
+                                <li><a href="the-well---downtown.html">The Well - Downtown</a> - Downtown Austin</li>
                                 <li><a href="red-ash.html">Red Ash</a> - Downtown Austin</li>
                             </ul>
                         </div>
