--- a/restaurants/the-well---congress.html
+++ b/restaurants/the-well---congress.html
@@ -190,7 +190,7 @@
                         <div class="related-restaurants">
                             <h3>Other The Well Locations</h3>
                             <ul>
-                                <li><a href="the-well-downtown.html">The Well - Downtown</a> - Downtown Austin (2nd Street)</li>
+                                <li><a href="the-well---downtown.html">The Well - Downtown</a> - Downtown Austin (2nd Street)</li>
                                 <li><a href="the-well---westlake.html">The Well - Westlake</a> - West Austin (Bee Caves)</li>
                             </ul>
                         </div>
